# sec-playground

./: .gitignore  README.md
pocs/agent-intent-bound-tokens/: .gitignore  README.md  go.mod  start.sh  stop.sh  test.sh
pocs/agent-prompt-injection-firewall/: .gitignore  README.md  firewall.go  firewall_test.go  go.mod  main.go  start.sh  stop.sh  test.sh
pocs/auth0-kotlin/: .gitignore  README.md  build.gradle.kts  gradlew  gradlew.bat  settings.gradle.kts  test-integration.sh
pocs/auth0-rust/: .gitignore  Cargo.toml  README.md  test-integration.sh
pocs/auth0-rust/sample-app/: start.sh  stop.sh
pocs/auth0-rust/sample-app/server/: Cargo.toml
pocs/auth0-rust/sample-app/server/src/: main.rs
pocs/auth0-rust/sample-app/webapp/: vite.config.ts
pocs/auth0-rust/src/: assertion.rs  auth.rs  auth_types.rs  client.rs  error.rs  generated.rs  generated_methods.rs  lib.rs  management.rs  models.rs  request.rs
pocs/auth0-rust/tests/: auth0_integration.rs  http_tests.rs  sdk_tests.rs
pocs/auth0-scala3/: .gitignore  README.md  build.sbt  test-integration.sh
pocs/auth0-webapp/: README.md  build.gradle  settings.gradle
pocs/certificate-requests/: cert.pem  create-certificate.sh  key.pem
pocs/go-istio-auth0/: .gitignore  Containerfile  README.md  test.sh
pocs/go-istio-keycloak/: .gitignore  README.md  create.sh  destroy.sh  go.mod  start.sh  stop.sh  test.sh
pocs/jwt-open/: README.md  index.ts  package.json
pocs/jwt-sign-verify/: README.md  index.ts  package-lock.json
pocs/macaroon-auth-go/: README.md  go.mod  macaroon.go  macaroon_test.go  main.go  server.go  (+4 more)
(+109 files in other folders)
